added jquery - toggle heart buttons

--- a/templates/feed_templates/home.html
+++ b/templates/feed_templates/home.html
@@ -45,11 +45,7 @@
                             alt="followPic" /></div>
                 </a>
                 <a href="" class="authorName">{{ post.creator.username }}</a>
-				
-				
                 <a href=""><img class="heartButton" id="sampleHeart1" width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
-				
-				
                 <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
                         alt="chat-bubble-dots" /></a>
                 <a href=""><img width="25px"; src="{% static 'images/share2.png' %}" alt="share2" /></a>
@@ -67,7 +63,7 @@
                             alt="followPic" /></div>
                 </a>
                 <a href="" class="authorName">{{ post.creator.username }}</a>
-                <a href=""><img width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
+                <a href=""><img class="heartButton" id="sampleHeart2" width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
                 <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
                         alt="chat-bubble-dots" /></a>
                 <a href=""><img width="25px"; src="{% static 'images/share2.png' %}" alt="share2" /></a>
@@ -85,7 +81,7 @@
                             alt="followPic" /></div>
                 </a>
                 <a href="" class="authorName">{{ post.creator.username }}</a>
-                <a href=""><img width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
+                <a href=""><img class="heartButton" id="sampleHeart3" width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
                 <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
                         alt="chat-bubble-dots" /></a>
                 <a href=""><img width="25px"; src="{% static 'images/share2.png' %}" alt="share2" /></a>
@@ -105,7 +101,7 @@
                             alt="followPic" /></div>
                 </a>
                 <a href="" class="authorName">{{ post.creator.username }}</a>
-                <a href=""><img width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
+                <a href=""><img class="heartButton" id="sampleHeart4" width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
                 <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
                         alt="chat-bubble-dots" /></a>
                 <a href=""><img width="25px"; src="{% static 'images/share2.png' %}" alt="share2" /></a>
@@ -123,7 +119,7 @@
                             alt="followPic" /></div>
                 </a>
                 <a href="" class="authorName">{{ post.creator.username }}</a>
-                <a href=""><img width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
+                <a href=""><img class="heartButton" id="sampleHeart5" width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
                 <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
                         alt="chat-bubble-dots" /></a>
                 <a href=""><img width="25px"; src="{% static 'images/share2.png' %}" alt="share2" /></a>
@@ -141,7 +137,7 @@
                             alt="followPic" /></div>
                 </a>
                 <a href="" class="authorName">{{ post.creator.username }}</a>
-                <a href=""><img width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
+                <a href=""><img class="heartButton" id="sampleHeart6" width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
                 <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
                         alt="chat-bubble-dots" /></a>
                 <a href=""><img width="25px"; src="{% static 'images/share2.png' %}" alt="share2" /></a>
@@ -161,7 +157,7 @@
                             alt="followPic" /></div>
                 </a>
                 <a href="" class="authorName">{{ post.creator.username }}</a>
-                <a href=""><img width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
+                <a href=""><img class="heartButton" id="sampleHeart7" width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
                 <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
                         alt="chat-bubble-dots" /></a>
                 <a href=""><img width="25px"; src="{% static 'images/share2.png' %}" alt="share2" /></a>
@@ -173,7 +169,7 @@
             <a href=""><img class="image" src="{{ MEDIA_URL }}samplePic8.png"
                     alt="samplePic8" /></a>
              <div class="allPicOpera">
-                <a href=""><img width="45px"; style="transform: translate(5px,15px);"
+                <a href=""><img class="heartButton" id="sampleHeart8" width="45px"; style="transform: translate(5px,15px);"
                         src="{{ MEDIA_URL }}profile.png" alt="profile" />
                     <div class="followPic"><img src="{% static 'images/followPic.png' %}"
                             alt="followPic" /></div>
