--- a/templates/feed_templates/login.html
+++ b/templates/feed_templates/login.html
@@ -11,7 +11,7 @@
         Login
     </title>
     <link rel="stylesheet" href="/static/css/login.css" type="text/css">
-
+    <link rel="shortcut icon" href="/static/images/favicon.ico" type="image/x-icon" />
 </head>
 
 <body>
