--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -11,7 +11,7 @@
         Register
     </title>
     <link rel="stylesheet" href="/static/css/register.css" type="text/css">
-
+    <link rel="shortcut icon" href="/static/images/favicon.ico" type="image/x-icon" />
 </head>
 
 <body>
