changed login password field from text to password

--- a/templates/feed_templates/login.html
+++ b/templates/feed_templates/login.html
@@ -41,7 +41,7 @@
                 </div>
                 <div id="PasswordFrame">
                     <form id="PasswordText" action="">
-                        <input type="text" name="PasswordText" value="Password" onfocus="this.value=''"
+                        <input type="password" name="PasswordText" value="Password" onfocus="this.value=''"
                             onblur="if(this.value==''){this.value='Password'}">
                     </form>
                 </div>
