IMPORTANT: fixed feed_templates to app name mismatch

--- a/templates/feed/about.html
+++ b/templates/feed/about.html
@@ -1,13 +1,13 @@
-{% extends 'feed_templates/base.html' %}
+{% extends 'feed/base.html' %}
 {% load staticfiles %}
 
 {% block title_block %}
-    Help
+    About
 {% endblock %}
 
 
 {% block body_block %}
 <div style="height: 500px;">
-    <span style="font-size: 30px; font-weight: 900;">Here is Help page.</span>
+    <span style="font-size: 30px; font-weight: 900;">Here is about page.</span>
 </div>
 {% endblock %}
