bandaid solution to userfollowers and userfollowing, will change later

--- a/templates/feed/userFollowers.html
+++ b/templates/feed/userFollowers.html
@@ -1,4 +1,4 @@
-{% extends 'feed/base.html' %}
+{% extends 'feed_templates/base.html' %}
 {% load staticfiles %}
 
 
@@ -36,14 +36,5 @@
         
     </div>
     <br>
-    <div id="paging">
-        <span>Previous</span>
-        <a href="">1</a>
-        <a href="">2</a>
-        <a href="">3</a>
-        <a href="">4</a>
-        <a href="">5</a>
-        <span>Next</span>
-    </div>
 </div>
 {% endblock %}
