--- a/templates/feed_templates/reset_complete.html
+++ b/templates/feed_templates/reset_complete.html
@@ -14,7 +14,7 @@
     <body>
         {% block body_block %}
         <h3>Password reset complete!</h3>
-        <a href="{% url 'feed_template:login' %}">Return to the login page!</a>
+        <a href="{% url 'feed:login' %}">Return to the login page!</a>
         {% endblock %}
         
         <div class="rowLine"></div>
@@ -22,9 +22,9 @@
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
             <link href="https://fonts.googleapis.com/css2?family=Passion+One&display=swap" rel="stylesheet">
-            <a href="{% url 'feed_templates:about' %}" class="helpInfo">About</a>
-            <a href="{% url 'feed_templates:help' %}" class="helpInfo">Help</a>
-            <a href="{% url 'feed_templates:contact_us' %}" class="helpInfo">Contact us</a>
+            <a href="{% url 'feed:about' %}" class="helpInfo">About</a>
+            <a href="{% url 'feed:help' %}" class="helpInfo">Help</a>
+            <a href="{% url 'feed:contact_us' %}" class="helpInfo">Contact us</a>
         </div>
         <div id="copyright">Copyright © 2022 Team 9D. All rights reserved.</div>
     </body>
