--- a/templates/feed/base.html
+++ b/templates/feed/base.html
@@ -19,7 +19,7 @@
     <div id="page">
         <header>
             <div id="topStrip">
-                <a href="" id="logo">
+                <a href="/" id="logo">
                     <img src="{% static 'images/logo.png' %}" alt="logo" />
                 </a>
                 <div id="search">
