--- a/templates/feed/home.html
+++ b/templates/feed/home.html
@@ -169,13 +169,13 @@
             <a href=""><img class="image" src="{{ MEDIA_URL }}samplePic8.png"
                     alt="samplePic8" /></a>
              <div class="allPicOpera">
-                <img class="heartButton" id="sampleHeart8" width="45px"; style="transform: translate(5px,15px);"
+                <a href=""><img width="45px"; style="transform: translate(5px,15px);"
                         src="{{ MEDIA_URL }}profile.png" alt="profile" />
                     <div class="followPic"><img src="{% static 'images/followPic.png' %}"
                             alt="followPic" /></div>
                 </a>
                 <a href="" class="authorName">{{ post.creator.username }}</a>
-                <a href=""><img width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
+                <img class="heartButton" id="sampleHeart8" width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
                 <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
                         alt="chat-bubble-dots" /></a>
                 <a href=""><img width="25px"; src="{% static 'images/share2.png' %}" alt="share2" /></a>
